No-Ticket: UPDATE more work on OpenAPI schemas
