# api-specs.yaml
@@ -1,131 +1,93 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
-  title: Kenisty API
-  description: The main entry point for Kenisty project.
-  version: 1.0.0
+  title: 'Kenisty API'
+  description: 'The main entry point for Kenisty project.'
   contact:
-    name: Pola Eskandar
+    name: 'Pola Eskandar'
+    url: 'https://codingstreamer.com'
     email: eskandar.pola@codingstreamer.com
-    url: https://codingstreamer.com
-servers:
-  - url: 'http://localhost:8080'
-    description: 'Development Server'
-  - url: 'https://kenisty.com'
-    description: 'Production Server'
+  license:
+    name: MIT
+  version: 1.0.0
 paths:
   /v1/auth/register:
     post:
+      operationId: 557dcb2ee3dfdae1e150def5ea1f831c
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRegisterReadV1'
       responses:
-        201:
-          description: 'Successfully registered a new user.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserSuccessfullyRegistered'
-        422:
-          description: 'Failed validation.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserFailedRegistration'
-        500:
-          description: 'Internal Server Error'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Exception'
-
-  /v1/auth/login:
-    post:
-      responses:
-        200:
+        '201':
           description: 'Successfully logged in an existing user.'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserSuccessfullyLoggedIn'
-        422:
+                $ref: '#/components/schemas/UserRegisterWriteV1'
+        '422':
           description: 'Failed validation.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserFailedLoggingIn'
-        500:
-          description: 'Internal Server Error'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Exception'
-
 components:
   schemas:
-    UserSuccessfullyRegistered:
-      description: 'Successful user registration schema'
+    UserRegisterReadV1:
+      title: UserRegisterReadV1
+      properties:
+        firstname:
+          title: Firstname
+          type: string
+          maxLength: 255
+          minLength: 3
+          nullable: false
+        lastname:
+          title: Lastname
+          type: string
+          maxLength: 255
+          minLength: 3
+          nullable: false
+        email:
+          title: Email
+          type: string
+          maxLength: 255
+          minLength: 3
+          nullable: false
+        password:
+          title: Password
+          type: string
+          maxLength: 255
+          minLength: 8
+          nullable: false
+        password_confirmation:
+          title: 'Password Confirmation'
+          type: string
+          maxLength: 255
+          minLength: 8
+          nullable: false
       type: object
+    ServerExceptionWriteV1:
+      title: ServerExceptionWriteV1
+      properties:
+        code:
+          type: integer
+        message:
+          type: string
+      type: object
+    UserRegisterWriteV1:
+      title: UserRegisterWriteV1
       properties:
         message:
           type: string
         data:
-          $ref: '#/components/schemas/AuthData'
-
-    UserSuccessfullyLoggedIn:
-      description: 'Successful user logging in schema'
+          $ref: '#/components/schemas/UserDataV1'
       type: object
-      properties:
-        message:
-          type: string
-        data:
-          $ref: '#/components/schemas/AuthData'
-
-    AuthData:
-      description: 'Successful authentication data'
-      type: object
+    UserDataV1:
+      title: UserDataV1
       properties:
         token:
           type: string
-          minLength: 3
-          maxLength: 255
-        firstName:
+        firstname:
           type: string
-          minLength: 3
-          maxLength: 255
-        lastName:
+        lastname:
           type: string
-          minLength: 3
-          maxLength: 255
         email:
           type: string
-          minLength: 3
-          maxLength: 255
-
-    UserFailedRegistration:
-      description: 'Failed user registration schema'
       type: object
-      properties:
-        message:
-          type: string
-        errors:
-          $ref: '#/components/schemas/ValidationFailedExceptionData'
-
-    UserFailedLoggingIn:
-      description: 'Failed user logging in schema'
-      type: object
-      properties:
-        message:
-          type: string
-        errors:
-          $ref: '#/components/schemas/ValidationFailedExceptionData'
-
-    ValidationFailedExceptionData:
-      description: 'Failed validation schema'
-      type: object
-
-    Exception:
-      description: 'Something went wrong'
-      type: object
-      properties:
-        message:
-          type: string
-        code:
-          type: integer
-          default: 500
